# aye-saac

./: .dockerignore  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .python-version  Dockerfile  LICENSE  Makefile  README.md  README.rst  docker-compose.yaml  dockerfile  environment.yml  group-6-config.json  pyproject.toml  scriptObject.py
.github/workflows/: ci.yml  codestyle.yml  dockerimage.yml
ayesaac/: README.md  main.py  send_one_request.py  start_all_services.sh  start_all_services_in_container.sh  start_all_services_in_env.sh  start_nlu.sh  stop_all_services.sh
ayesaac/data/color/: lab.txt
ayesaac/data/models/: coco_category_index.py
ayesaac/nlu_prep/: README.md  config.yml  train_nlu.py
ayesaac/nlu_prep/data/: nlu.md  nlu_combi.md  nlu_textual_queries.md
ayesaac/nlu_prep/entries/: allergens  allergens.txt  colours.txt  designator.txt  ingredient.txt  nutri  nutri.txt  objects.txt  user  user.txt
ayesaac/nlu_prep/results/: DIETClassifier_errors.json  (+5 more)
ayesaac/queue_manager/: __init__.py  delete_queues.py  queue_manager.py
ayesaac/services_lib/: service_logger.py
ayesaac/tests/: color_detection.py
ayesaac/utils/: config.py  gen_group6_config.py  logger.py
ayesaac/web/: app.py  user_request.py
data/sentence_templates/: ALLERGENS_INCLUDED_POSITIVE  ALLERGENS_NEGATIVE_ANSWER  ALLERGENS_POSITIVE_ANSWER  ALLERGEN_ADDED_NEGATIVE  ALLERGEN_ADDED_POSITIVE  CLARIFY_QUESTION  COLOR_DETECTION  COLOR_DETECTION_N  CONFIDENCE_NOTHING  CONFIDENCE_SOMETHING  COOKING_INFO_NEGATIVE  COOKING_INFO_POSITIVE_ANSWER  COOKING_TEMP_POSITIVE_ANSWER  COOKING_TIME_POSITIVE_ANSWER  DESCRIPTION_ANSWER_P  DESCRIPTION_ANSWER_S  DESCRIPTION_COUNT  DESCRIPTION_NOTHING  DESCRIPTION_UNKNOWN  EXPIRY_DATE_NEGATIVE_ANSWER  EXPIRY_DATE_POSITIVE_ANSWER  NEGATIVE_ANSWER_P  NEGATIVE_ANSWER_S  NUTRITIONAL_POSITIVE_ANSWER  POSITIVE_ANSWER_P  POSITIVE_ANSWER_S  READ_ALLERGENS  READ_INGREDIENTS  READ_TEXT_NEGATIVE  READ_TEXT_POSITIVE  RECYCLE_NEGATIVE_ANSWER  RECYCLE_POSITIVE_ANSWER  SAFETY_CLARIFY  SAFETY_POSITIVE  SAFETY_POSITIVE_NO_INP  SIMPLE_PACKAGE_INFO_ANSWER  STORAGE_ANSWER  THANKS_ANSWER  WELCOMING_ANSWER
evaluation/: data_of_interest.json  data_of_interest.tsv  parse_scene_graph.py
evaluation/general-vqa/: general-vqa-questions.md
evaluation/spatial-relation/: download_eval_data.sh  spatial-relation-questions.md
evaluation/textual-vqa/: README.md
scripts/: create_image.sh  docker-entrypoint.sh  download-epic-kitchens-model.sh  download-resnet-model.sh  download-spacy-model.sh  scriptObject.py
tests/: colour_detection.py  ocr.py  test_ayesaac.py
(+267 files in other folders)
